# EdTech-Dashboard

./: .vercelignore  main.py  pyproject.toml  requirements.txt  vercel.json
templates/: analysis_dashboard.html  certificates.html  dashboard.html  index.html  login.html  mock.html  questions.html  result_dashboard.html  results.html  signup.html  user_dashboard.html
test/: test.ipynb
utils/: answer.py  ats.py  db.py  graphs.py  llms.py  prompt.py  stats.py  test_cases.py
