[project]
name = "placement-readiness-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.47.0",
    "gunicorn>=23.0.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langchain-text-splitters>=1.0.0",
    "langsmith>=0.4.39",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pypdf>=6.1.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "sentry-sdk[flask]>=2.43.0",
    "sqlalchemy>=2.0.44",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "assemblyai>=0.46.0",
    "ipykernel>=7.1.0",
]
